1999-03-25  Roland McGrath  <roland@baalperazim.frob.com>

	* setup.c (setup): Don't complain if the device is a block device.

Wed Feb 19 23:10:39 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (argp_program_version): Make const.

Thu Sep 12 16:40:10 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	($(target)): Delete special depedency.

	* Makefile (vpath tables.c): Put after Makeconf inclusion to catch
	setting of $(top_srcdir).

Fri Sep  6 16:44:07 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (argp_program_version): Fix typo.

Thu Sep  5 11:42:21 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c: Include <version.h>.
 	(argp_program_version): Define with STANDARD_HURD_VERSION.

Fri Aug 16 10:25:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* dir.c (record_directory): Maximum number of block pointers to
	record is NDADDR + NIADDR, not NDADDR * NIADDR.
	* pass2.c: Include <assert.h>.
 	(pass2): Before copying block addresses to DINO in basic
	integrity check, assert that DNP->i_numblks isn't too big.

Mon Aug 12 11:39:12 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (dir): Now ufs-fsck.

Tue Jul 23 19:32:09 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* inode.c (allocino): `struct timespec' now uses a field prefix
	of `tv_'.
	* utilities.c (pinode): Likewise.

Thu Jul 18 14:55:14 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pass2.c (pass2): If an entire directory block is null, allow
	preen to patch it into a normal empty directory entry.

Sat Jul  6 19:59:27 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (argp_program_version): New variable.
	<hurd.h>: New include.

Mon Jul  1 12:55:48 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pass2.c (pass2): Don't skip empty directories in `.' and `..'
 	correctness check; we don't clear them the way BSD does, so we